# Simulation

./: .gitignore  CMakeLists.txt  LICENCE  README.md  Simulation.sln  Simulation.vcxproj  Simulation.vcxproj.filters  compile.bat  compile.sh  engine.sh  main.sh  render.bat  render.sh  simulate.bat  simulate.sh  sonar-project.properties  test.bat  test.csv  test.sh  test_file_name.json
SimulationEngineLib/: CMakeLists.txt
SimulationEngineLib/constant/: PhysicalConstants.h
SimulationEngineLib/cpp/constant/: PhysicalConstants.h
SimulationEngineLib/cpp/distribution/: Distribution.cpp  Distribution.h  Distribution3D.cpp  Distribution3D.h  DistributionCircle.cpp  DistributionCircle.h  DistributionCube.cpp  DistributionCube.h  DistributionCuboid.cpp  DistributionCuboid.h  DistributionDensity.cpp  DistributionDensity.h  DistributionGlobe.cpp  DistributionGlobe.h  DistributionMassDensity.cpp  DistributionMassDensity.h  DistributionSimple.cpp  DistributionSimple.h  DistributionSphere.cpp  DistributionSphere.h  DistributionSquare.cpp  DistributionSquare.h  DistributionValue.cpp  DistributionValue.h  ParticleDistribution.cpp  ParticleDistribution.h  ParticleDistributionDisk.cpp  ParticleDistributionDisk.h  (+4 more)
SimulationEngineLib/distribution/: Distribution.cpp  Distribution3D.cpp  Distribution3D.h  DistributionCircle.cpp  DistributionCircle.h  DistributionCube.cpp  DistributionCube.h  DistributionCuboid.cpp  DistributionCuboid.h  DistributionDensity.cpp  DistributionGlobe.cpp  DistributionGlobe.h  DistributionMassDensity.cpp  DistributionMassDensity.h  DistributionSimple.cpp  DistributionSimple.h  DistributionSphere.cpp  DistributionSphere.h  DistributionSquare.cpp  DistributionSquare.h  DistributionValue.cpp  DistributionValue.h  ParticleDistribution.h  ParticleDistributionDisk.cpp  ParticleDistributionDisk.h  ParticleDistributionSimple.cpp  ParticleDistributionSimple.h
SimulationEngineLib/gpuHelper/: CudaWithError.cu  CudaWithError.cuh  GpuDataController.cu  GpuDataController.cuh
SimulationEngineLib/law/: CpuLaw.h  GpuLaw.cpp  GpuLaw.h  Law.cpp  Law.h
SimulationEngineLib/particle/: Particle.cu  Particle.cuh  ParticleAngularSimple.h  ParticleSimple.cpp  ParticleSimple.h
SimulationEngineLib/universe/: Universe.cpp  Universe.h  UniverseImpl.cpp  UniverseImpl.h  UniverseImplSimple.cpp  UniverseImplSimple.h  UniverseTiming.cpp  UniverseTiming.h
SimulationEngineLib/util/: MatrixMaths.cu  MatrixMaths.cuh
SimulationEngineServer/: CMakeLists.txt  main.cpp
SimulationLib/: CMakeLists.txt  Collision.cpp  Collision.cu  Collision.cuh  Collision.h  CollisionCoalesce.cpp  CollisionCoalesce.cu  CollisionCoalesce.h  CollisionDetector.cuh  CollisionDetector.h  CollisionDetectorSimple.cu  CollisionDetectorSimple.cuh  CollisionDetectorSimple.h  CollisionResolver.cuh  CollisionResolver.h  CollisionResolverCoalesce.cpp  CollisionResolverCoalesce.cu  CollisionResolverCoalesce.cuh  CollisionResolverCoalesce.h  Collission.cpp  Collission.h  CollissionCoalesce.cpp  CollissionCoalesce.h  CpuCollision.cpp  CpuCollision.h  CpuLaw.h  CpuNewtonFirstLaw.cpp  CpuNewtonFirstLaw.h  CpuNewtonGravity.cpp  CpuNewtonGravity.h  CudaWithError.cu  CudaWithError.cuh  Distribution.cpp  Distribution.h  Distribution3D.cpp  Distribution3D.h  DistributionCircle.cpp  DistributionCircle.h  DistributionCube.cpp  DistributionCube.h  (+77 more)
SimulationLib/distribution/: Distribution.h  DistributionCircle.h  DistributionCuboid.cpp  DistributionCuboid.h  DistributionGlobe.cpp  DistributionGlobe.h  DistributionMassDensity.h  DistributionSimple.cpp  DistributionSimple.h  DistributionSphere.h  DistributionSquare.cpp  DistributionSquare.h  DistributionValue.h  ParticleDistribution.cpp  ParticleDistributionDisk.cpp  ParticleDistributionDisk.h  ParticleDistributionSimple.cpp  ParticleDistributionSimple.h
SimulationLib/gpuHelper/: CudaWithError.cu
SimulationLib/law/: GpuLaw.cpp
SimulationLib/particle/: Particle.cu  Particle.cuh  ParticleSimple.cpp
SimulationLib/universe/: Universe.cpp  Universe.h  UniverseImplSimple.cpp  UniverseImplSimple.h  UniverseTiming.h
SimulationLib/util/: MatrixMaths.cu  MatrixMaths.cuh  Timing.cpp
SimulationRenderer/: CMakeLists.txt  InputJSON.cpp  InputJSON.h  Timing.cpp  Timing.h  main.cpp  main.py  simulation_output.json
SimulationRenderer/resource/: resource.rc
SimulationRendererLib/: CMakeLists.txt  InputJSON.cpp  InputJSON.h  InputJson.cpp  InputJson2.cpp
SimulationTest/common/: CMakeLists.txt  CollisionTestHelper.cpp  CollisionTestHelper.h  NewtonFirstLawTestHelper.cpp  NewtonFirstLawTestHelper.h  NewtonGravityTestHelper.cpp  NewtonGravityTestHelper.h
SimulationTest/cpuTests/: CMakeLists.txt  CollisionDetectorSimpleTest.cpp  CollisionResolverCoalesceTest.cpp  CollisionTest.cpp  DistributionCircleTest.cpp  DistributionCubeTest.cpp  DistributionCuboidTest.cpp  DistributionGlobeTest.cpp  DistributionMassDensityTest.cpp  DistributionSimpleTest.cpp  DistributionSphereTest.cpp  DistributionSquareTest.cpp  DistributionTest.cpp  EinsteinMomentumServiceTest.cpp  FileUtilTest.cpp  GpuLawTest.cpp  InputJsonTest.cpp  MatrixMathsTest.cpp  NewtonFirstLawTest.cpp  NewtonGravityTest.cpp  NewtonMomentumServiceTest.cpp  ParticleDistributionDiskTest.cpp  ParticleDistributionSimpleTest.cpp  ParticleInputFieldMassTest.cpp  ParticleInputFieldPositionXTest.cpp  ParticleInputFieldPositionYTest.cpp  ParticleInputFieldPositionZTest.cpp  ParticleInputFieldRadiusTest.cpp  ParticleInputFieldVelocityXTest.cpp  ParticleInputFieldVelocityYTest.cpp  ParticleInputFieldVelocityZTest.cpp  ParticleInputTest.cpp  ParticleRelativisticTest.cpp  ParticleTest.cpp  ParticlesHelperTest.cpp  SimulationInputCsvTest.cpp  SimulationInputDistributionStarSystemTest.cpp  SimulationInputRandomSimpleTest.cpp  SimulationOutputCsvTest.cpp  SimulationOutputJSONTest.cpp  (+7 more)
SimulationTest/gpuTests/: CMakeLists.txt  CollisionTestGpu.cpp  GpuDataControllerTest.cpp  LawHelper.cpp  LawHelper.h  NewtonFirstLawTestGpu.cpp  NewtonGravityTest.cu  NewtonGravityTestGpu.cpp  ParticleTestHelper.cpp  ParticleTestHelper.h  UniverseImplSimpleTestGpu.cpp
(+351 files in other folders)
